tests/negative/duplicate_fn.sans
// expect-error: PARSE ERR
main() I {
  x = (((
  x
}
